# CUDA-WalkOnSolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt  wosolver.cu
demo/assets/: bunny.ply  cube.ply  spot.ply  tetrahedron.ply
demo/test/: bvh.cu
dependencies/pcg32/: pcg32.h
include/cuwos/: common.h  cuda_graph.h  debug.cuh  feature.h  memory.h  vector.h
include/cuwos/geometry/: polygon.h
include/cuwos/wosolver/: aabb.h  bvh.h  function.h  primitive.h  solver.cuh  solver.h
src/: common.cu
src/geometry/: polygon.cu
src/wosolver/: bvh.cu  solver.cu
